@page RN25 Release notes for PAPILO 3.0

@section RN250 PaPILO 3.0.0

Interface changes
-----------------

### Changed parameters

### New parameters with default values


Data Structure:
------------

- Postsolve: The event "FixedColInf" contains now also the information if the opposing bound is infinite.
    Note that Postsolving is no longer backwards compatible. (PAPILO_API_VERSION 4)
    The PostsolveStack for this entry is changed from (ind = [col,...], val=[bound,...]) to (ind = [col,is_inf, ...], val=[0,bound,...])

Build system
------------

- for cmake >= 3.30 CMP0167 is enforced and BOOST_ROOT no longer supported, please use Boost_DIR instead with these cmake versions
- disable default solvers and require linking when enabled

Fixed bugs
----------


@page RN24 Release notes for PAPILO 2.4

@section RN242 PaPILO 2.4.2

Fixed bugs
----------

- SCIP: Provide implied integrality when setting up component problem
- Highs: Enforce integrality of enforced binary and integer variables
- Gurobi: Declare implied integral variable with binary bounds binary

Build system
------------

Miscellaneous
-------------


@section RN241 PaPILO 2.4.1

Fixed bugs
----------

- SparseStorage: Determine end pointers without behind last accesses

Build system
------------

- improved search for dependencies when another tool uses papilo-config.cmake
- updated the unit testing framework catch from 2.13.8 to 3.7.0
- link the executable via the Fortran compiler when clusol is used

@section RN240 PaPILO 2.4.0

Interface changes
-----------------

### Changed parameters

- presolve.abortfac = 0.00080000000000000004: abort factor of weighted number of reductions for exhaustive presolving
- presolve.lpabortfac = 0.01: abort factor of weighted number of reductions for exhaustive LP presolving

### New parameters with default values

- numerics.useabsfeas = 1: whether to use an absolute tolerance for feasibility checks