@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 3.11.0)
 set(PAPILO_VERSION_MAJOR 3)
 set(PAPILO_VERSION_MINOR 0)
 set(PAPILO_VERSION_PATCH 0)
-set(PAPILO_API_VERSION 4)
+set(PAPILO_API_VERSION 5)
 
 project(papilo VERSION ${PAPILO_VERSION_MAJOR}.${PAPILO_VERSION_MINOR}.${PAPILO_VERSION_PATCH}.0)
 
